test/corpus/2024_3/numerics.txt
================================================================================
Numeric literals
================================================================================

RETURN 
    0,
    00,
    009,
    100_000,
    0xFF_FF,
    0o77_77,
    .3_14,
    1_000.3_14,
    10000.02E10_000,
    10000.02E-10_000,
    10000.02e+10_000,
    .3_14D,
    .3_14d,
    .3_14F,
    .3_14f,
    NaN,
    INF,
    INfinity
    ;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (decimal_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (decimal_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (decimal_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (decimal_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (hex_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (integer_literal
                              (octal_integer)))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal
                            (decimal_literal))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal)))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal)))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (number_literal))))))))))))))
