test/corpus/2024_3/string.txt
================================================================================
String literal
================================================================================

RETURN 
    '\\',
    '\'',
    '\"',
    '\`',
    '\t',
    '\b',
    '\n',
    '\r',
    '\f',
    '\u3033',
    '\Uaaafff',
    '''',
    """"
    ;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char))))))
                  (projection_item
                    (expression
                      (atom
                        (literal
                          (string_literal
                            (escaped_char)))))))))))))))
